@@ -1,36 +1,37 @@
-<form name="guestcomments" method="post" flexy:ignore>
-<input type="hidden" name="action" value="delete" />
-
 <h1 class="pageTitle">{translate(pageTitle)}</h1>
 <span flexy:if="msgGet()">{msgGet()}</span>
-
 {if:pager}<flexy:include src="pager.html" />{end:}
+
 <table class="wide">
-    {if:aPagedData[data]}
-        {foreach:aPagedData[data],key,aValue} 
+{if:aPagedData[data]}
+    {foreach:aPagedData[data],key,aValue} 
         <tr>
             <td>{aValue[date_created]}</td>
         </tr>
         <tr>
-            <td>{translate(#Name#)}: <strong>{aValue[name]}</strong>&nbsp; {translate(#E-Mail#)}: <b>{aValue[email]}</b></td>
+            <td>
+                {translate(#Name#)}: <strong>{aValue[name]}</strong>&nbsp;
+                {translate(#Email#)}: <b>{aValue[email]}</b>
+            </td>
         </tr>
         <tr>
             <td>{aValue[message]:h}</td>
         </tr>
         <tr>
-            <td><hr></td>
+            <td><hr /></td>
         </tr>                
-        {end:}
-    {else:}
+    {end:}
+{else:}
     <tr>
         <td>{translate(#No Guestbook entries found#)}.</td>
     </tr>
-    {end:}
+{end:}
     <tr>
         <td>
-            <input type="button" value="{translate(#add new entry#)}" 
-                onClick="javascript:document.location.href='{makeUrl(#add#,#guestbook#)}'" />
+            <form name="guestcomments" method="post" flexy:ignore>
+                <input type="button" value="{translate(#add new entry#)}" 
+                    onClick="javascript:document.location.href='{makeUrl(#add#,#guestbook#)}'" />
+            </form>
         </td>
     </tr>
 </table>
-</form>
